@@ -38,6 +38,7 @@ Bugfix: fixed csOO + csFIDE-style strings never showing check(mate).
 Refactored Trans(Position)Table into a c++ class.
 Converted code to use platform-agnostic std::thread.
 Implemented platform-agnostic Semaphore class and converted everyone to use it.
+Refactored Spinlocks into a platform-agnostic C++11 class (1.6% speedup)
 
 Version 1.1:
 Build improvements: use Git for version control, cmake for building
